# pilus

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  README.md  mypy.ini  pyproject.toml
pilus/: __init__.py  _auto_imports.py  test.bdr
pilus/_converters/: __init__.py  _bdr_aggregate_to_simple_table.py  _box_to_snipdb.py  _direct_conversions.py  _iqs_aggregate_to_snipdb.py  _merge_snip_parts.py  _preferred_types.py
pilus/_magic/: __init__.py  _magic.py  _medium.py  _raw_medium.py  signatures.py
pilus/basic/: __init__.py  _bdr_aggregate.py  _box.py  _extremum.py  _iqs_aggregate.py  _lpcm.py  _transition_fit.py  _wave.py  _wave_meta.py
pilus/basic/_box/: __init__.py  _box.py  _box_from_dir.py  _manifest.py
pilus/basic/_simple_table/: __init__.py  _simple_table.py  _to_csv.py
pilus/basic/_wave/: __init__.py  _lpcm.py  _lpcm_io.py  _wave.py  _wave_meta.py
pilus/cli/: __init__.py
pilus/cli/_commands/: __init__.py
pilus/cli/_commands/_convert/: __init__.py  _convert.py
pilus/cli/_commands/_show/: __init__.py  _show.py
pilus/errors/: __init__.py  _errors.py
pilus/forge/: __init__.py  _combiner.py  _combiner_map.py  _forge.py  _forge_io.py  _global_forge.py  _merger.py  _merger_map.py  _morph.py  _morph_graph.py  _run_once.py
pilus/forge/_on_demand/: __init__.py  _pilus_basic.py  _pilus_sbt.py  _polars.py
pilus/formats/: __init__.py  _errors.py
pilus/formats/_chunk/: __init__.py  _chunk_io.py
pilus/formats/_io/: _io_utilities.py  _signature.py
pilus/formats/bdr/: _bdr_from_io.py  _errors.py
pilus/formats/bdr/_chunks/: __init__.py  _ahdr.py  _chunk.py  _misc.py  _tran.py
pilus/formats/box/: __init__.py  _box.py  _box_from_dir.py  _errors.py  _manifest.py
pilus/formats/csv/: __init__.py  _to_csv.py
pilus/formats/iqs/: __init__.py  _errors.py  _io_utilities.py  _iqs_from_io.py  _iqs_globals.py  _iqs_to_io.py  _signature.py
pilus/formats/iqs/_chunks/: __init__.py  _chunk.py  _idat.py  _ihdr.py  _sdat.py  _shdr.py
pilus/formats/json/: __init__.py  _generic_json_deserializer.py
pilus/formats/registry/: __init__.py
pilus/formats/registry/_deserializers/: __init__.py  _deserializer.py  _deserializer_group.py  _deserializer_registry.py  _errors.py  _generate_deserializer.py  _resource.py
pilus/formats/snip/: _errors.py  _snip_attribute_declaration_map.py  _snip_attributes.py
pilus/formats/wave/: __init__.py  _lpcm.py  _wave.py
pilus/model/: __init__.py  _add_media_type.py  _frozen_model.py  _model.py
pilus/numerics/: _numpy.py
pilus/polars/: __init__.py  _from_polars_df.py  _register_polars.py  _to_polars_df.py
pilus/sbt/: __init__.py
pilus/sbt/_format/_chunk/: __init__.py  _chunk.py  _chunk_io.py  _crc.py
pilus/sbt/_format/_io/: __init__.py  _io_utilities.py  _signature.py
pilus/sbt/_format/bdr/: __init__.py  _bdr_from_io.py
pilus/sbt/_format/iqs/: __init__.py  _iqs_from_io.py  _iqs_to_io.py
pilus/sbt/_model/: __init__.py  _bdr_aggregate.py  _extremum.py  _iqs_aggregate.py
pilus/sbt/_transform/: __init__.py  _bdr_aggregate_to_simple_table.py  _iqs_aggregate_to_snipdb.py
pilus/snipdb/: __init__.py  _snip_attribute_declaration_map.py  _snip_attributes.py  _snip_from_iqs.py  _snip_part.py  _snip_part_metadata.py  _snip_row.py  _snip_row_metadata.py  _snipdb.py  _snipdb_core.py
pilus/snipdb/_transform/: __init__.py  _box_to_snipdb.py  _direct_conversions.py
pilus/snipdb/transform/: __init__.py  _box_to_snipdb.py
pilus/utility/: __init__.py  _duplicates.py  _freeze_mapping.py
scripts/: analyzer.py  bdr_to_csv_human_readable.py  bdr_visualizer.py  data_visualizer.py  iqs_frequency_transform.py  iqs_processing.py  iqs_to_snip.py  splitter.py
spat/: open_iqs.py
spat/basic/: __init__.py  _extremum.py  _wave.py  _wave_meta.py
spat/formats/: __init__.py  _errors.py  _utility.py
spat/formats/_merge/: __init__.py  _merge.py  _merger.py
spat/formats/_parse/: __init__.py  _errors.py  _generate_parser.py  _parse.py  _parser.py  _parser_group.py  _resource.py
spat/formats/_parser_map/: __init__.py  _identified_data.py  _parser_map.py
spat/formats/_utility/: __init__.py
spat/formats/bdr/: __init__.py  _bdr.py  _errors.py  _signature.py
spat/formats/bdr/_chunks/: _ahdr.py  _chunk.py  _tran.py
spat/formats/box/: __init__.py  _box.py  _errors.py  _manifest.py
spat/formats/extrema_json/: __init__.py  _errors.py  _extrema_json.py
spat/formats/iqs/: __init__.py  _aggregate.py  _crc.py  _errors.py  _io_utilities.py  _iqs.py  _signature.py  _utils.py
spat/formats/iqs/_chunks/: __init__.py  _chunk.py  _idat.py  _ihdr.py  _sdat.py  _shdr.py
spat/formats/json/: __init__.py  _generic_json_deserializer.py  _generic_json_parser.py
spat/formats/model/: __init__.py  _from_funcs.py  _model.py
spat/formats/registry/: __init__.py
spat/formats/registry/_deserializers/: __init__.py  _errors.py  (+3 more)
spat/formats/seed/: __init__.py  _errors.py  _seed.py
spat/formats/snip/: __init__.py  _attributes.py  _errors.py  _merge_snip_parts.py  _snip.py  _snip_attribute_declaration_map.py  _snip_attributes.py  _snip_part.py  _snip_part_metadata.py
spat/formats/wave/: __init__.py  _wave.py
spat/model/: __init__.py  _add_media_type.py  _from_funcs.py  _model.py
spat/numerics/: __init__.py  _numpy.py
spat/scripts/: data_visualizer.py  iqs_processing.py  labqt_config.json  splitter.py
spat/seed/: _format_utils.py  formats.py  seed.py
spat/snipdb/: _snip_from_iqs.py  _snipdb.py
spat/types/: __init__.py  _box.py  _extremum.py  _wav_meta.py  _wave.py  _wave_meta.py
spat/types/_box/: __init__.py  _box.py  _item.py
spat/types/_seed/: __init__.py  _channel.py  _item.py  _seed.py
spat/types/_snip/: __init__.py  _snip.py  _snip_attribute_declaration_map.py  _snip_attributes.py  _snip_key.py  _snip_part.py  _snip_part_metadata.py
spat/utility/: __init__.py  _duplicates.py  _split_at_suffixes.py
tests/: _assets.py  disabled___test_iqs.py  old_test_seed.py  test_bdr.py  test_box.py  test_csv.py  test_iqs.py  test_iqs_io.py  test_iqs_to_snip.py  test_lpcm_from_wave.py  test_seed.py  test_snip.py  test_spat.py
(+17 files in other folders)
