[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "pilus"
version = "0.1.0"
description = ""
authors = [
    { name = "tvi", email = "tvi@sbtinstruments.com" },
    { name = "fpa", email = "fpa@sbtinstruments.com" },
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "cyto[model] @ git+https://github.com/sbtinstruments/cyto@09fc2f8488316b80b7314af0ec2f1b7884abe283",
    "immutables>=0.20,<1",
    "pydantic>=2.9.2,<3",
    "tinydb>=4.4.0,<5",
    "typeguard>=2.12.1,<3",
    "networkx>=3.4.2,<4",
    "python-magic>=0.4.27,<0.5",
]

[project.optional-dependencies]
cli = ["typer>=0.12.3,<1"]
polars = ["polars[pyarrow, numpy]>=1.3.0,<2"]

[project.scripts]
pilus = "pilus.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.2.2,<9",
    "pyfakefs>=5.6.0,<6",
    "mypy>=1.10.1,<2",
    "types-networkx<4.0,>=3.0",
    "ruff>=0.14.13",
    "lago @ git+https://github.com/sbtinstruments/lago@688a97d17825852792cf72e770d369dee312d2d1",
]

[tool.ruff.lint.isort]
# Mark SBT-developed packages as first-party. This ensures that the import order
# is the same whether pilus is in the monorepo or the public repo.
known-first-party = ["cyto"]
